--- a/index.html
+++ b/index.html
@@ -7,6 +7,28 @@
     
   </head>
   <body>
-    
+    <header>
+      <h1> Varykino Villa </h1>
+      <p> Willkommen in unsere wunderschöne Ferien-Villa im wunderschönen Ort auf Naboo. <br> Machen Sie sich bereit auf schöne Sonnenuntergänge am See mit einem Glas Wein in Hand. </p>
+    </header>
+    <main>
+      <p> Regen gibt es hier nicht, also machen Sie sich bereit für Sonne pur, lange
+      Strandspaziergänge und Sprünge vom hauseigenen Steg in den immer warmen See
+      Magelan.</p>
+      <h3> Einrichtung </h3>
+      <ul>
+        <li>Whirlpool</li>
+        <li>Pool</li>
+        <li>Sauna</li>
+        <li>Kinosaal</li>
+        <li>Persönlicher Koch</li>
+        <li>Persönliches Fittnessstudio </li>
+      </ul>
+      <img src=https://media-cdn.tripadvisor.com/media/photo-s/06/0f/d0/ba/caption.jpg>
+    </main>
+    <footer>
+      <address> 
+      </address>
+    </footer>
   </body>
 </html>
