--- a/index.html
+++ b/index.html
@@ -25,9 +25,19 @@
         <li>Persönliches Fittnessstudio </li>
       </ul>
       <img src=https://media-cdn.tripadvisor.com/media/photo-s/06/0f/d0/ba/caption.jpg>
+      
+      <h3> Anreisemöglichkeiten </h3>
+
+      <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d26374.578256583954!2d9.196233196755184!3d45.98551783184303!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sVarykino%20Villa!5e0!3m2!1sde!2sde!4v1687777462204!5m2!1sde!2sde" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      
     </main>
     <footer>
       <address> 
+        Kontakt: <br>
+        0495/1234567 <br>
+        Galaxystraße 26 <br>
+        01726 Theed <br>
+        Naboo 
       </address>
     </footer>
   </body>
