--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <p> Regen gibt es hier nicht, also machen Sie sich bereit für Sonne pur, lange
       Strandspaziergänge und Sprünge vom hauseigenen Steg in den immer warmen See
       Magelan.</p>
+      
       <h3> Einrichtung </h3>
       <ul>
         <li>Whirlpool</li>
@@ -26,11 +27,11 @@
         <li>Persönliches Fittnessstudio </li>
       </ul>
       <div >
-      <img src=https://media-cdn.tripadvisor.com/media/photo-s/06/0f/d0/ba/caption.jpg>
-      
-      <img src="https://i.pinimg.com/736x/e4/7e/6c/e47e6cd64ec3455a38d7679b9fd03a91--italian-villa-outdoor-pool.jpg" alt="">
+      <img src=https://media-cdn.tripadvisor.com/media/photo-s/06/0f/d0/ba/caption.jpg width="500">
 
-      <img src="https://www.clever-fit.com/app/uploads/2022/10/IMG-4606-1024x768.jpg" alt="">
+      <img src="https://i.pinimg.com/736x/e4/7e/6c/e47e6cd64ec3455a38d7679b9fd03a91--italian-villa-outdoor-pool.jpg" width="500" >
+
+      <img src="https://www.clever-fit.com/app/uploads/2022/10/IMG-4606-1024x768.jpg" width="500">
       </div>
       <div class="box2">
       <h2> Anreisemöglichkeiten </h2>
