--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <p> Regen gibt es hier nicht, also machen Sie sich bereit für Sonne pur, lange
       Strandspaziergänge und Sprünge vom hauseigenen Steg in den immer warmen See
       Magelan.</p>
-      
+
       <h3> Einrichtung </h3>
       <ul>
         <li>Whirlpool</li>
@@ -36,7 +36,7 @@
       <div class="box2">
       <h2> Anreisemöglichkeiten </h2>
 
-      <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d26374.578256583954!2d9.196233196755184!3d45.98551783184303!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sVarykino%20Villa!5e0!3m2!1sde!2sde!4v1687777462204!5m2!1sde!2sde" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      <iframe clas="map" src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d26374.578256583954!2d9.196233196755184!3d45.98551783184303!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sVarykino%20Villa!5e0!3m2!1sde!2sde!4v1687777462204!5m2!1sde!2sde" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       <br>
       <br>
       </div>
