--- a/index.html
+++ b/index.html
@@ -10,12 +10,9 @@
   <body>
     <header>
       <h1> Varykino Villa </h1>
-      <p> Willkommen in unsere wunderschöne Ferien-Villa im wunderschönen Ort auf Naboo. <br> Machen Sie sich bereit auf schöne Sonnenuntergänge am See mit einem Glas Wein in Hand. </p>
+      <p> Willkommen in unsere wunderschöne Ferien-Villa im wunderschönen Ort auf Naboo. <br> Machen Sie sich bereit auf schöne Sonnenuntergänge am See mit einem Glas Wein in Hand. Regen gibt es hier nicht, also machen Sie sich bereit für Sonne pur, lange Strandspaziergänge und Sprünge vom hauseigenen Steg in den immer warmen See Magelan</p>
     </header>
     <main>
-      <p> Regen gibt es hier nicht, also machen Sie sich bereit für Sonne pur, lange
-      Strandspaziergänge und Sprünge vom hauseigenen Steg in den immer warmen See
-      Magelan.</p>
 
       <h3> Ausstattung </h3>
       <ul>
