--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
         <li>Persönlicher Koch</li>
         <li>Persönliches Fittnessstudio </li>
       </ul>
-      
-      <img src=https://media-cdn.tripadvisor.com/media/photo-s/06/0f/d0/ba/caption.jpg width="500">
+      <br>
+      <img src=https://media-cdn.tripadvisor.com/media/photo-s/06/0f/d0/ba/caption.jpg width="500" alt="Villa am See im Sonnigen Italien">
 
-      <img src="https://i.pinimg.com/736x/e4/7e/6c/e47e6cd64ec3455a38d7679b9fd03a91--italian-villa-outdoor-pool.jpg" width="500" >
+      <img src="https://i.pinimg.com/736x/e4/7e/6c/e47e6cd64ec3455a38d7679b9fd03a91--italian-villa-outdoor-pool.jpg" width="500" alt="Pool in einer Villa mit Whirlpool">
 
-      <img src="https://www.clever-fit.com/app/uploads/2022/10/IMG-4606-1024x768.jpg" width="500">
+      <img src="https://www.clever-fit.com/app/uploads/2022/10/IMG-4606-1024x768.jpg" width="500" alt="Gut ausgestattetes Fittnesstudio.">
       <br>
 
       <div>
